# PolyStack

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  system_info.rs
src-tauri/src/environment/: mod.rs
src/router/: index.ts
src/stores/: environment.ts  service.ts  settings.ts  system.ts
src/views/: Apache.vue  Dashboard.vue  Environments.vue  Layout.vue  MySQL.vue  Nginx.vue  PHP.vue  Services.vue  Settings.vue  Websites.vue
